crates/compiler/parser/tests/snapshots/expressions::trailing_comma_struct_literal.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { Point { x: 1, y: 2, }; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                StructLiteral {
                                    name: Spanned(
                                        "Point",
                                        14..19,
                                    ),
                                    fields: [
                                        (
                                            Spanned(
                                                "x",
                                                22..23,
                                            ),
                                            Spanned(
                                                Literal(
                                                    1,
                                                ),
                                                25..26,
                                            ),
                                        ),
                                        (
                                            Spanned(
                                                "y",
                                                28..29,
                                            ),
                                            Spanned(
                                                Literal(
                                                    2,
                                                ),
                                                31..32,
                                            ),
                                        ),
                                    ],
                                },
                                14..35,
                            ),
                        ),
                        14..36,
                    ),
                ],
            },
            0..38,
        ),
    ),
]
