crates/compiler/parser/tests/snapshots/expressions::u32_bound_up.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test() { 4294967295; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Literal(
                                    4294967295,
                                ),
                                12..22,
                            ),
                        ),
                        12..23,
                    ),
                ],
            },
            0..25,
        ),
    ),
]
