crates/compiler/parser/tests/snapshots/expressions::unary_not.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { !a; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                UnaryOp {
                                    op: Not,
                                    expr: Spanned(
                                        Identifier(
                                            Spanned(
                                                "a",
                                                15..16,
                                            ),
                                        ),
                                        15..16,
                                    ),
                                },
                                14..16,
                            ),
                        ),
                        14..17,
                    ),
                ],
            },
            0..19,
        ),
    ),
]
