crates/compiler/parser/tests/snapshots/statements::break_outside_loop.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { break; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Break,
                        14..20,
                    ),
                ],
            },
            0..22,
        ),
    ),
]
