crates/compiler/parser/tests/snapshots/statements::continue_outside_loop.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { continue; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Continue,
                        14..23,
                    ),
                ],
            },
            0..25,
        ),
    ),
]
