crates/compiler/parser/tests/snapshots/statements::expression_statement.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { foo(); }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                FunctionCall {
                                    callee: Spanned(
                                        Identifier(
                                            Spanned(
                                                "foo",
                                                14..17,
                                            ),
                                        ),
                                        14..17,
                                    ),
                                    args: [],
                                },
                                14..19,
                            ),
                        ),
                        14..20,
                    ),
                ],
            },
            0..22,
        ),
    ),
]
