crates/compiler/parser/tests/snapshots/statements::for_loop_simple.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { for i in range { let x = i; } }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        For {
                            variable: Spanned(
                                "i",
                                18..19,
                            ),
                            iterable: Spanned(
                                Identifier(
                                    Spanned(
                                        "range",
                                        23..28,
                                    ),
                                ),
                                23..28,
                            ),
                            body: Spanned(
                                Block(
                                    [
                                        Spanned(
                                            Let {
                                                pattern: Identifier(
                                                    Spanned(
                                                        "x",
                                                        35..36,
                                                    ),
                                                ),
                                                statement_type: None,
                                                value: Spanned(
                                                    Identifier(
                                                        Spanned(
                                                            "i",
                                                            39..40,
                                                        ),
                                                    ),
                                                    39..40,
                                                ),
                                            },
                                            31..41,
                                        ),
                                    ],
                                ),
                                29..43,
                            ),
                        },
                        14..43,
                    ),
                ],
            },
            0..45,
        ),
    ),
]
