crates/compiler/parser/tests/snapshots/statements::for_loop_with_continue.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { for item in items { if (skip) { continue; } process(item); } }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        For {
                            variable: Spanned(
                                "item",
                                18..22,
                            ),
                            iterable: Spanned(
                                Identifier(
                                    Spanned(
                                        "items",
                                        26..31,
                                    ),
                                ),
                                26..31,
                            ),
                            body: Spanned(
                                Block(
                                    [
                                        Spanned(
                                            If {
                                                condition: Spanned(
                                                    Identifier(
                                                        Spanned(
                                                            "skip",
                                                            38..42,
                                                        ),
                                                    ),
                                                    38..42,
                                                ),
                                                then_block: Spanned(
                                                    Block(
                                                        [
                                                            Spanned(
                                                                Continue,
                                                                46..55,
                                                            ),
                                                        ],
                                                    ),
                                                    44..57,
                                                ),
                                                else_block: None,
                                            },
                                            34..57,
                                        ),
                                        Spanned(
                                            Expression(
                                                Spanned(
                                                    FunctionCall {
                                                        callee: Spanned(
                                                            Identifier(
                                                                Spanned(
                                                                    "process",
                                                                    58..65,
                                                                ),
                                                            ),
                                                            58..65,
                                                        ),
                                                        args: [
                                                            Spanned(
                                                                Identifier(
                                                                    Spanned(
                                                                        "item",
                                                                        66..70,
                                                                    ),
                                                                ),
                                                                66..70,
                                                            ),
                                                        ],
                                                    },
                                                    58..70,
                                                ),
                                            ),
                                            58..72,
                                        ),
                                    ],
                                ),
                                32..74,
                            ),
                        },
                        14..74,
                    ),
                ],
            },
            0..76,
        ),
    ),
]
